# ANTsPyNet

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  download_all_data.py  download_antsxnet_data.py  index.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml  test.yml
antspynet/: __init__.py  config.py
antspynet/architectures/: __init__.py  create_alexnet_model.py  create_autoencoder_model.py  create_convolutional_autoencoder_model.py  create_custom_model.py  create_custom_unet_model.py  create_cycle_gan_model.py  create_deep_back_projection_network_model.py  create_deep_convolutional_gan_model.py  create_deep_denoise_super_resolution_model.py  create_denoising_auto_encoder_super_resolution_model.py  create_dense_model.py  create_densenet_model.py  create_denseunet_model.py  create_diffusion_probabilistic_unet_model.py  create_expanded_super_resolution_model.py  create_image_super_resolution_model.py  create_improved_wasserstein_gan_model.py  create_normalizing_flow_model.py  create_partial_convolution_unet_model.py  create_resnet_model.py  create_resnet_super_resolution_model.py  create_resunet_model.py  create_simple_classification_with_spatial_transformer_network_model.py  create_spatial_transformer_network_model.py  create_super_resolution_gan_model.py  create_transformer_model.py  create_unet_model.py  create_vanilla_gan_model.py  create_vgg_model.py  create_wasserstein_gan_model.py  create_wide_resnet_model.py  fetch_architecture.py
antspynet/cli/: __init__.py  mouse_brain_extraction.py
antspynet/pretrained/: __init__.py  chexnet.py  claustrum_segmentation.py  deep_atropos.py  get_pretrained_network.py  histology.py  inpainting.py  mri_super_resolution.py
antspynet/utilities/: __init__.py  attention_utilities.py  brain_age.py  brain_extraction.py  brain_mra_vessel.py  brain_mra_vessel_segmentation.py  brain_tumor_segmentation.py  cerebellum_morphology.py  cerebellum_segmentation.py  chexnet.py  claustrum_segmentation.py  cortical_thickness.py  crop_image_center.py  cropping_and_padding_utilities.py  custom_activation_layers.py  custom_convolution_layers.py  custom_metrics.py  custom_normalization_layers.py  data_augmentation.py  deep_atropos.py  deep_embedded_clustering_utilities.py  deep_flash.py  denseunet_utilities.py  desikan_killiany_tourville_labeling.py  extract_image_patches.py  gaussian_diffusion_utilities.py  get_antsxnet_data.py  get_pretrained_network.py  harvard_oxford_atlas_labeling.py  hippmapp3r_segmentation.py  histogram_warp_image_intensities.py  histology.py  hypothalamus_segmentation.py  inpainting.py  lesion_segmentation.py  lung_extraction.py  lung_segmentation.py  mixture_density_utilities.py  mouse.py  mri_modality_classification.py  (+15 more)
architectures/: __init__.py  create_deep_back_projection_network_model.py  create_resnet_model.py  create_unet_model.py
docker/: Dockerfile  README.md  add_data.dockerfile  get_antsxnet_data.py
docs/: Makefile  requirements.txt
docs/source/: architectures.rst  conf.py  index.rst  (+1 more)
tests/: test_brain.py  test_brain_extraction.py  test_general_applications.py  test_lungs.py  test_mouse.py  test_mouse_cli.py  test_wmh_pvs.py
utilities/: __init__.py  custom_losses.py  extract_image_patches.py  reconstruct_image_from_patches.py
