[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antspynet"
version = "0.2.4"
description = "A collection of deep learning architectures ported to the python language and tools for basic medical image processing."
readme = "README.md"
authors = [
    {name = "Nicholas J. Tustison", email = "ntustison@gmail.com"},
    {name = "Brian B. Avants"},
    {name = "Nick Cullen"}
]
license = {text = "MIT License"}
keywords = ["ANTsPyNet", "deep learning", "medical image processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "tensorflow",
    "keras",
    "antspyx>=0.4.2",
    "scikit-learn",
    "requests",
    "statsmodels",
    "matplotlib"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ANTsX/ANTsPyNet"

[tool.setuptools_scm]
tag_regex = '^v(.+)$'

[tool.setuptools.packages]
find = { include = ["antspynet"] }
