[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antspynet"
version = "0.3.0"
description = "A collection of deep learning architectures ported to the python language and tools for basic medical image processing."
readme = "README.md"
authors = [
    {name = "Nicholas J. Tustison", email = "ntustison@gmail.com"},
    {name = "Brian B. Avants"},
    {name = "Nick Cullen"}
]
license = {text = "Apache License 2.0"}
keywords = ["ANTsPyNet", "deep learning", "medical image processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "tensorflow>=2.11,<=2.17",
#    "keras<3",
    "antspyx>=0.4.2",
    "scikit-learn",
    "requests",
    "statsmodels",
    "matplotlib"
]

[project.urls]
homepage = "https://github.com/ANTsX/ANTsPyNet"

[tool.setuptools.packages]
find = { include = ["antspynet","antspynet.*"] }

[tool.setuptools]
license-files = []

